changed to class

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <!-- So above our links next to the codepen logo is a yellow Explore -->
       <div class="nav-explore">
-        <div id="explore">Explore</div>
+        <div class="explore">Explore</div>
         <div class="links-wrapper">
           <div class="nav-link">Pens</div>
           <div class="nav-link">Projects</div>
